--- a/index.html
+++ b/index.html
@@ -54,9 +54,17 @@
           <a href="mailto:daniel.zhouqx@gmail.com">daniel.zhouqx@gmail.com</a>
         </div>
         <p class="lead mb-5 text-justify">
-          I consider myself to be an experienced junior developer, comfortable in the field yet much to learn. This self honed interest has grown into an aspiration, and I hope to further my studies in the domain of Computer Science, and eventually be a full time developer.
+          I am a developer comfortable in the field yet much to learn. My aspiration is to further my studies in the Computer Science domain, and eventually be a full time
+          developer. I am spontaneous, adaptive and relentless.
         </p>
-        <p class="mb-5 text-justify" style="font-size:0.8rem">Apart from being a developer, I am currently a Full-time National Serviceman serving the nation in the elite Commandos Formation. With Singapore's tropical weather, I am an avid ultimate frisbee player that plays competitive frisbee regularly and novice athlete, who enjoys swimming, running and triathlon training, as well as exploring new sports like rock climbing, archery on this small island. Indoors, I like exploring the vast domain of Computer Science, frequently involving myself in creating web applications or machine learning algorithms that can help me in the real world. With my studies in the subject of Knowledge and Inquiry, this big picture approach allows me to understand the nature and ecosystem of subdomains naturally with my abstract thinking.</p>
+        <p class="text-justify" style="font-size:0.8rem">In approaching broad and intricate domains, I remain methodological, focusing on understanding conceptual frameworks, abstract reasoning and best practices. Acknowledging the importance of
+          relevancy, I
+          actively explore projects that benefits my immediate community, believing that opportunity is found, not met.</p>
+        <hr>
+        <p class="mb-5 text-justify" style="font-size:0.8rem">
+          Apart from my career pursuits, I am a Full-time National Serviceman in the Commandos Formation. I am an avid ultimate frisbee player and novice athlete who
+          enjoys triathlon trainings and exploring new sports like rock climbing, archery on this small island. I hope to buy a bike and fufill my dream of completing multiple Ironman races.
+        </p>
 
         <div class="social-icons">
           <a class="social-icon" target="_blank" href="https://github.com/algebananazzzzz"><i class="fab fa-github"></i></a>
@@ -72,29 +80,10 @@
         <h2 class="mb-5">Experience</h2>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">ProjectBalls</h3>
-            <div class="subheading mb-3">Full stack developer</div>
-            <p class="text-justify">Involved in full stack development and hosting of a video editing web application software, ProjectBalls, using the Django framework. Hosting is done through a private owned server and domain using Nginx, Docker
-              and Kubernetes. Heavily utilizes python video processing library MoviePy, as well as Redis for enqueueing Asynchronous tasks in the backend. Frontend architecture utilizes HTML5, CSS3, Jquery and JavaScript libraries including MovieJs
-              and Granimjs. Project is used by Eunoia Junior College's PE department for editing gameplay videos.</p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - Current</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Chemistry mindmap</h3>
-            <div class="subheading mb-3">Web page development</div>
-            <p class="text-justify">Created an interactive <a href="https://algebananazzzzz.github.io/organic-chemistry-mindmap.html" target="blank">webpage</a> that serves as a chemistry mindmap for students studying H2 Chemistry in the A level examinations to memorise 69 organic chemistry reactions. </p>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">June 2021</span></div>
-        </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
             <h3 class="mb-0">Internship</h3>
             <div class="subheading mb-3">Sustainable Lab Square</div>
-            <p class="text-justify">Involved in evaluating and refining the Artificial Intelligence courseware developed for youths, playing an instrumental role in developing sample codes for AI with Python’s NumPy, Pandas, Sklearn and Keras
-              libraries, including a
-              project that accurately performs Facial and Image Recognition utilising OpenVino inference engine and Neural Compute Stick. Also involved in a hackathon organised for youths, and guided older peers to the finals, and learnt a wide array
+            <p class="text-justify">Involved in evaluating and refining the Artificial Intelligence courseware developed for youths, and in developing sample codes for AI with Python libraries and inference engines, for instance a
+              project that accurately performs Facial and Image Recognition. Also involved as a crew in a hackathon organised for youths, and guided older peers to the finals. Learnt a wide array
               of thinking tools from Sustainable Living Lab, including User-Centred Design and Futures Thinking.</p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">June 2018 - July 2018</span></div>
@@ -110,8 +99,12 @@
           <div class="flex-grow-1">
             <h3 class="mb-0">Eunoia Junior College</h3>
             <div class="subheading mb-3">Pre-university course</div>
-            <div>Subject combination: PCM/KI</div>
-            <p>Year 1 RP: 75/80</p>
+            <p>
+              Awards: Dean's List (Academic) 2020, CCC - CDC Education Merit Award 2020
+            </p>
+            <p>Subject combination: PCM/KI<br>
+              Year 1 RP: 75/80 <br>
+              A level results: AAA/B</p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">January 2020 - December 2021</span></div>
         </div>
@@ -119,7 +112,11 @@
           <div class="flex-grow-1">
             <h3 class="mb-0">Catholic High School</h3>
             <div class="subheading mb-3">Secondary education</div>
-            <p>GPA: 4.00</p>
+            <p>Awards: Year 4 Subject Prize (top 1) in Additional Mathematics and Chemistry, Year 4 Book Prize, Silver in International CB Paul Science and Computing Quiz, Edusave Scholarship Award in 2019 and 2018, Merit award in SJPO and SJChO
+            </p>
+            <p>Subject combination: Triple Science, double Mathematics
+              <br>GPA: 4.00
+            </p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">January 2016 - December 2019</span></div>
         </div>
@@ -173,25 +170,6 @@
             OpenVino inference engine and Neural Compute Stick
           </li>
         </ul>
-        <!-- <div class="subheading mb-3">Workflow</div>
-        <ul class="fa-ul mb-0">
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            Mobile-First, Responsive Design
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            Cross Browser Testing & Debugging
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            Cross Functional Teams
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            Agile Development & Scrum
-          </li>
-        </ul> -->
       </div>
     </section>
     <hr class="m-0" />
@@ -199,7 +177,25 @@
     <section class="resume-section" id="projects">
       <div class="resume-section-content">
         <h2 class="mb-5">Projects</h2>
-        work in progress :/
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">ProjectBalls</h3>
+            <div class="subheading mb-3">Full stack developer</div>
+            <p class="text-justify">Involved in full stack development and hosting of a video editing web application, <a href="https://github.com/algebananazzzzz/ProjectBallsWeb">ProjectBalls</a>, using the Django framework. Technologies used
+              includes Nginx, Docker
+              and Kubernetes, Redis. Project is used by EJC's PE department for editing gameplay videos.</p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - June 2021</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Chemistry mindmap</h3>
+            <div class="subheading mb-3">Web page development</div>
+            <p class="text-justify">Created an interactive <a href="https://algebananazzzzz.github.io/organic-chemistry-mindmap.html" target="blank">webpage</a> that serves as a chemistry mindmap for students studying H2 Chemistry in the A level
+              examinations to memorise 69 organic chemistry reactions. </p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">June 2021</span></div>
+        </div>
       </div>
     </section>
     <hr class="m-0" />
@@ -222,7 +218,6 @@
     <section class="resume-section" id="awards">
       <div class="resume-section-content">
         <h2 class="mb-5">Awards & Certifications</h2>
-        Work in progress :/
         <!-- <ul class="fa-ul mb-0">
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
