--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <title>Algebananazzzzz</title>
-  <link rel="icon" type="image/x-icon" href="assets/img/favicon.ico" />
+  <link rel="icon" type="image/x-icon" href="assets/resume/favicon.ico" />
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/granim/2.0.0/granim.min.js" integrity="sha512-CmlPTWm5+a1Gt2YSNk2rGZVvbH3Zge6imS7M4/vrhC8d+A1RcehmLxWMqUdv8aEu7pwfTo74EtnrR+8Cf8KdCA==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -33,9 +33,9 @@
       <ul class="navbar-nav">
         <li class="nav-item"><a class="nav-link js-scroll-trigger" onclick="change_default_state()" onmouseover="change_default_state()" onmouseout="set_gradient_state()" href="#about">About</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" onclick="change_purple_state()" onmouseover="change_purple_state()" onmouseout="set_gradient_state()" href="#experience">Experience</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" onclick="change_dark_blue_state()" onmouseover="change_dark_blue_state()" onmouseout="set_gradient_state()" href="#education">Education</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" onclick="change_dark_blue_state()" onmouseover="change_dark_blue_state()" onmouseout="set_gradient_state()" href="#projects">Projects</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" onclick="change_blue_state()" onmouseover="change_blue_state()" onmouseout="set_gradient_state()" href="#skills">Skills</a></li>
-        <li class="nav-item"><a class="nav-link js-scroll-trigger" onclick="change_green_state()" onmouseover="change_green_state()" onmouseout="set_gradient_state()" href="#projects">Projects</a></li>
+        <li class="nav-item"><a class="nav-link js-scroll-trigger" onclick="change_green_state()" onmouseover="change_green_state()" onmouseout="set_gradient_state()" href="#education">Education</a></li>
         <li class="nav-item"><a class="nav-link js-scroll-trigger" onclick="change_amber_state()" onmouseover="change_amber_state()" onmouseout="set_gradient_state()" href="#awards">Awards</a></li>
       </ul>
     </div>
@@ -50,20 +50,18 @@
           <span class="text-primary">Zhou</span>
         </h1>
         <div class="subheading mb-5">
-          Algebananazzzzz ·
+          <a href="https://github.com/algebananazzzzz">Algebananazzzzz</a> ·
           <a href="mailto:daniel.zhouqx@gmail.com">daniel.zhouqx@gmail.com</a>
         </div>
         <p class="lead mb-5 text-justify">
-          I am a developer comfortable in the field yet much to learn. My aspiration is to further my studies in the Computer Science domain, and eventually be a full time
-          developer. I am spontaneous, adaptive and relentless.
+          I aspire to become a developer, as I find joy in development, and in achieving profound impacts in communities.
         </p>
-        <p class="text-justify" style="font-size:0.8rem">In approaching broad and intricate domains, I remain methodological, focusing on understanding conceptual frameworks, abstract reasoning and best practices. Acknowledging the importance of
-          relevancy, I
-          actively explore projects that benefits my immediate community, believing that opportunity is found, not met.</p>
+        <p class="text-justify" style="font-size:0.8rem">I am proficient in programming logic, fluent in multiple programming languages and frameworks and actively find opportunities to utilise my skills to practically benefit my community, by
+          finding the needs of my community. I am methodological, focusing on understanding conceptual frameworks, abstract reasoning and best practices.</p>
         <hr>
         <p class="mb-5 text-justify" style="font-size:0.8rem">
-          Apart from my career pursuits, I am a Full-time National Serviceman in the Commandos Formation. I am an avid ultimate frisbee player and novice athlete who
-          enjoys triathlon trainings and exploring new sports like rock climbing, archery on this small island. I hope to buy a bike and fufill my dream of completing multiple Ironman races.
+          Apart from my career pursuits, I am a National Serviceman in the Commandos Formation. I am an avid ultimate frisbee player and novice athlete who
+          enjoys triathlon trainings and exploring new sports like rock climbing, archery on this small island.
         </p>
 
         <div class="social-icons">
@@ -84,46 +82,50 @@
             <div class="subheading mb-3">Sustainable Lab Square</div>
             <p class="text-justify">Involved in evaluating and refining the Artificial Intelligence courseware developed for youths, and in developing sample codes for AI with Python libraries and inference engines, for instance a
               project that accurately performs Facial and Image Recognition. Also involved as a crew in a hackathon organised for youths, and guided older peers to the finals. Learnt a wide array
-              of thinking tools from Sustainable Living Lab, including User-Centred Design and Futures Thinking.</p>
+              of thinking tools from Sustainable Living Lab, including User-Centred Design and Futures Thinking. <a href="assets/resume/reccltr_sl2.pdf" target="_blank">View reccomendation letter</a> </p>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">June 2018 - July 2018</span></div>
         </div>
       </div>
     </section>
     <hr class="m-0" />
-    <!-- Education-->
-    <section class="resume-section" id="education">
+    <section class="resume-section" id="projects">
       <div class="resume-section-content">
-        <h2 class="mb-5">Education</h2>
+        <h2 class="mb-5">Projects</h2>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">Eunoia Junior College</h3>
-            <div class="subheading mb-3">Pre-university course</div>
-            <p>
-              Awards: Dean's List (Academic) 2020, CCC - CDC Education Merit Award 2020
-            </p>
-            <p>Subject combination: PCM/KI<br>
-              Year 1 RP: 75/80 <br>
-              A level results: AAA/B</p>
+            <h3 class="mb-0">ProjectBalls</h3>
+            <div class="subheading mb-3">Full stack development</div>
+            <p class="text-justify">Involved in full stack development and hosting of a video editing web application, <a href="https://github.com/algebananazzzzz/ProjectBallsWeb">ProjectBalls</a>, using the Django framework. Technologies used
+              includes Nginx, Docker
+              and Kubernetes, Redis. Project is used by EJC's PE department for editing gameplay videos.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">January 2020 - December 2021</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - June 2021</span></div>
         </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between">
+
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">Catholic High School</h3>
-            <div class="subheading mb-3">Secondary education</div>
-            <p>Awards: Year 4 Subject Prize (top 1) in Additional Mathematics and Chemistry, Year 4 Book Prize, Silver in International CB Paul Science and Computing Quiz, Edusave Scholarship Award in 2019 and 2018, Merit award in SJPO and SJChO
-            </p>
-            <p>Subject combination: Triple Science, double Mathematics
-              <br>GPA: 4.00
-            </p>
+            <h3 class="mb-0">EJC Unconference 2021</h3>
+            <div class="subheading mb-3">Unconference instructor</div>
+            <p class="text-justify">Held an Unconference (tutorial) in EJC to teach interested peers the basics of HTML and architecture of
+              webpages. Participants are then taught to develop their own resumes and deploy them as a static
+              webpage in Github, similar to this resume. Online tutorial is found <a href="https://algebananazzzzz.github.io/eunoiashining/tutorial/index.html" target="blank">here</a>.</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">January 2016 - December 2019</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">August 2021</span></div>
+        </div>
+        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="flex-grow-1">
+            <h3 class="mb-0">Web page development</h3>
+            <div class="subheading mb-3">Static webpage development</div>
+            <p class="text-justify">Created an interactive <a href="https://algebananazzzzz.github.io/organic-chemistry-mindmap.html" target="blank">webpage</a> that serves as a chemistry mindmap for students studying H2 Chemistry in the A level
+              examinations to memorise 69 organic chemistry reactions. </p>
+          </div>
+          <div class="flex-shrink-0"><span class="text-primary">June 2021</span></div>
         </div>
       </div>
     </section>
     <hr class="m-0" />
-    <!-- Skills-->
+    <!-- Education-->
     <section class="resume-section" id="skills">
       <div class="resume-section-content">
         <h2 class="mb-5">Skills</h2>
@@ -174,90 +176,63 @@
     </section>
     <hr class="m-0" />
 
-    <section class="resume-section" id="projects">
+    <section class="resume-section" id="education">
       <div class="resume-section-content">
-        <h2 class="mb-5">Projects</h2>
+        <h2 class="mb-5">Education</h2>
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">ProjectBalls</h3>
-            <div class="subheading mb-3">Full stack developer</div>
-            <p class="text-justify">Involved in full stack development and hosting of a video editing web application, <a href="https://github.com/algebananazzzzz/ProjectBallsWeb">ProjectBalls</a>, using the Django framework. Technologies used
-              includes Nginx, Docker
-              and Kubernetes, Redis. Project is used by EJC's PE department for editing gameplay videos.</p>
+            <h3 class="mb-0">Eunoia Junior College</h3>
+            <div class="subheading mb-3">Pre-university course</div>
+            <p>Subject combination: PCM/KI<br>
+              Year 1 RP: 75/80 <br>
+              A level results: AAA/B</p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - June 2021</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">January 2020 - December 2021</span></div>
         </div>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
+        <div class="d-flex flex-column flex-md-row justify-content-between">
           <div class="flex-grow-1">
-            <h3 class="mb-0">Chemistry mindmap</h3>
-            <div class="subheading mb-3">Web page development</div>
-            <p class="text-justify">Created an interactive <a href="https://algebananazzzzz.github.io/organic-chemistry-mindmap.html" target="blank">webpage</a> that serves as a chemistry mindmap for students studying H2 Chemistry in the A level
-              examinations to memorise 69 organic chemistry reactions. </p>
+            <h3 class="mb-0">Catholic High School</h3>
+            <div class="subheading mb-3">Secondary education</div>
+            <p>Subject combination: Triple Science, double Mathematics
+              <br>GPA: 4.00
+            </p>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">June 2021</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">January 2016 - December 2019</span></div>
         </div>
       </div>
     </section>
     <hr class="m-0" />
 
-    <!-- <hr class="m-0" />
-    <section class="resume-section-grid" id="Projects">
-      <div class="parent">
-        <div class="div1 bg-primary"></div>
-        <div class="div2 bg-secondary"> sdasdsa</div>
-        <div class="div3 bg-success">dasdssa </div>
-        <div class="div4 bg-warning"> sdsadas</div>
-        <div class="div5 bg-info"> dsdsad</div>
-        <div class="div6 bg-danger"> dsdsa</div>
-        <div class="div7 bg-light">sadasd </div>
-        <div class="div8 bg-dark"> dasd</div>
-      </div>
-    </section>
-    <hr class="m-0" /> -->
     <!-- Awards-->
     <section class="resume-section" id="awards">
       <div class="resume-section-content">
         <h2 class="mb-5">Awards & Certifications</h2>
-        <!-- <ul class="fa-ul mb-0">
+        <ul class="fa-ul mb-0">
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            Google Analytics Certified Developer
+            Dean's List (Academic) 2020
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            Mobile Web Specialist - Google Certification
+            CCC - CDC Education Merit Award 2020
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2009
+            Year 4 Subject Prize in Additional Mathematics and Chemistry, Year 4 Book Prize
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - University of Colorado Boulder - Adobe Creative Jam 2008 (UI Design Category)
+            Silver in International CB Paul Science and Computing Quiz
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            2
-            <sup>nd</sup>
-            Place - University of Colorado Boulder - Emerging Tech Competition 2008
+            Edusave Scholarship Award in 2019 and 2018
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            1
-            <sup>st</sup>
-            Place - James Buchanan High School - Hackathon 2006
+            Merit award in SJPO and SJChO
           </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            3
-            <sup>rd</sup>
-            Place - James Buchanan High School - Hackathon 2005
-          </li>
-        </ul> -->
+        </ul>
       </div>
     </section>
   </div>
