--- a/index.html
+++ b/index.html
@@ -54,10 +54,13 @@
           <a href="mailto:daniel.zhouqx@gmail.com">daniel.zhouqx@gmail.com</a>
         </div>
         <p class="lead mb-5 text-justify">
-          I aspire to become a developer, as I find joy in development, and in achieving profound impacts in communities.
+          I aspire to become a developer, as I find joy in the development process, and in achieving profound impacts in communities.
         </p>
-        <p class="text-justify" style="font-size:0.8rem">I am proficient in programming logic, fluent in multiple programming languages and frameworks and actively find opportunities to utilise my skills to practically benefit my community, by
-          finding the needs of my community. I am methodological, focusing on understanding conceptual frameworks, abstract reasoning and best practices.</p>
+        <p class="text-justify" style="font-size:0.8rem">I pride myself in actively finding opportunities to utilise my skills to practically benefit my community.
+          <!-- I am methodological, focusing on understanding conceptual frameworks, abstract reasoning and best practices.  -->
+          I currently have an offering and is awaiting to enroll in NUS Computer Sciences.
+        </p>
+
         <hr>
         <p class="mb-5 text-justify" style="font-size:0.8rem">
           Apart from my career pursuits, I am a National Serviceman in the Commandos Formation. I am an avid ultimate frisbee player and novice athlete who
@@ -80,9 +83,12 @@
           <div class="flex-grow-1">
             <h3 class="mb-0">Internship</h3>
             <div class="subheading mb-3">Sustainable Lab Square</div>
-            <p class="text-justify">Involved in evaluating and refining the Artificial Intelligence courseware developed for youths, and in developing sample codes for AI with Python libraries and inference engines, for instance a
-              project that accurately performs Facial and Image Recognition. Also involved as a crew in a hackathon organised for youths, and guided older peers to the finals. Learnt a wide array
-              of thinking tools from Sustainable Living Lab, including User-Centred Design and Futures Thinking. <a href="assets/resume/reccltr_sl2.pdf" target="_blank">View reccomendation letter</a> </p>
+            <p class="text-justify">Development of sample AI software with Python’s NumPy, Pandas, Sklearn and Keras libraries without aid, including a functional AI software that pulls JSON data from a weather forecast API in a gardening watering
+              project.</p>
+            <p class="text-justify">
+              Also contributed to a project to accurately perform Facial and Image Recognition with utilising OpenVino inference engine and Neural Compute Stick, and helped out in a hackathon organised for youths, guiding
+              older peers to the finals.</p>
+            <a href="assets/resume/reccltr_sl2.pdf" target="_blank">View reccomendation letter</a>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">June 2018 - July 2018</span></div>
         </div>
@@ -96,9 +102,12 @@
           <div class="flex-grow-1">
             <h3 class="mb-0">ProjectBalls</h3>
             <div class="subheading mb-3">Full stack development</div>
-            <p class="text-justify">Involved in full stack development and hosting of a video editing web application, <a href="https://github.com/algebananazzzzz/ProjectBallsWeb">ProjectBalls</a>, using the Django framework. Technologies used
-              includes Nginx, Docker
-              and Kubernetes, Redis. Project is used by EJC's PE department for editing gameplay videos.</p>
+            <p class="text-justify">
+              Solo full stack development of a video editing web application, ProjectBalls, used by EJC's PE department for editing gameplay videos.</p>
+            <p class="text-justify">
+              Project is developed using the Python Django framework with Postgresql and Redis, and extensive use of frontend frameworks like Bootstrap, Jquery and VideoJS.
+              Also hosted application through a domain using backend technologies of Nginx, Docker and Docker-compose in the development phase.</p>
+            <a href="https://github.com/algebananazzzzz/ProjectBallsWeb">ProjectBalls Github repository</a>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - June 2021</span></div>
         </div>
@@ -106,21 +115,27 @@
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
             <h3 class="mb-0">EJC Unconference 2021</h3>
-            <div class="subheading mb-3">Unconference instructor</div>
-            <p class="text-justify">Held an Unconference (tutorial) in EJC to teach interested peers the basics of HTML and architecture of
+            <div class="subheading mb-3">Instructor</div>
+            <p class="text-justify">
+              Held an Unconference (tutorial) in EJC to teach interested peers the basics of HTML and architecture of
               webpages. Participants are then taught to develop their own resumes and deploy them as a static
-              webpage in Github, similar to this resume. Online tutorial is found <a href="https://algebananazzzzz.github.io/eunoiashining/tutorial/index.html" target="blank">here</a>.</p>
+              webpage in Github, similar to this resume.</p>
+            <a href="https://algebananazzzzz.github.io/eunoiashining/tutorial/index.html" target="blank">View tutorial</a>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">August 2021</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">Aug 2021</span></div>
         </div>
+
+
         <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="flex-grow-1">
-            <h3 class="mb-0">Web page development</h3>
-            <div class="subheading mb-3">Static webpage development</div>
-            <p class="text-justify">Created an interactive <a href="https://algebananazzzzz.github.io/organic-chemistry-mindmap.html" target="blank">webpage</a> that serves as a chemistry mindmap for students studying H2 Chemistry in the A level
-              examinations to memorise 69 organic chemistry reactions. </p>
+            <h3 class="mb-0">Chemistry Summary Webpage</h3>
+            <div class="subheading mb-3">Static Webpage developer</div>
+            <p class="text-justify">
+              Created an interactive webpage that serves as a chemistry mindmap for students studying H2 Chemistry in the A level
+              examinations to memorise 69 organic chemistry reactions.</p>
+            <a href="https://algebananazzzzz.github.io/organic-chemistry-mindmap.html" target="blank">View webpage</a>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">June 2021</span></div>
+          <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - June 2021</span></div>
         </div>
       </div>
     </section>
@@ -130,31 +145,24 @@
       <div class="resume-section-content">
         <h2 class="mb-5">Skills</h2>
         <!-- <div class="subheading mb-3">Programming Languages & Tools</div> -->
-        <div class="subheading mb-3">Full stack web development</div>
-        <ul class="list-inline dev-icons">
-          <li class="list-inline-item"><i class="fab fa-html5"></i></li>
-          <li class="list-inline-item"><i class="fab fa-css3-alt"></i></li>
-          <li class="list-inline-item"><i class="fab fa-js"></i></li>
-          <li class="list-inline-item"><i class="fab fa-python"></i></li>
-          <!-- <li class="list-inline-item"><i class="fab fa-linux"></i></li> -->
-          <!-- <li class="list-inline-item"><i class="fab fa-java"></i></li> -->
-        </ul>
+        <div class="subheading mb-3">Web developer</div>
+
         <ul class="fa-ul mb-3">
           <li>
             <span class="fa-li"><i class="fas fa-server"></i></span>
-            Experienced in the Python-Django framework
+            Experienced in the Python-Django, Flask and NodeJs framework
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-database"></i></span>
-            Fluent in Database Languages - MySQL, PostgreSQL, CouchDB
+            Profound in integrating Databases - MySQL, PostgreSQL, NoSQL, Redis
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
-            HTML5, CSS3, JavaScript, Angular and React, Bootstrap frameworks
+            Fluent in HTML, CSS, JavaScript and Jquery, Bootstrap frameworks
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-terminal"></i></span>
-            DevOps tools - zsh/bash, Nginx, Redis, Docker and Kubernetes
+            Experience in using DevOps tools - shell, Nginx, Docker and Kubernetes
           </li>
         </ul>
         <div class="subheading mb-3">Artificial Intelligence and machine learning</div>
@@ -165,11 +173,7 @@
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-check"></i></span>
-            Sklearn and Keras
-          </li>
-          <li>
-            <span class="fa-li"><i class="fas fa-check"></i></span>
-            OpenVino inference engine and Neural Compute Stick
+            Scikit-Learn and Keras
           </li>
         </ul>
       </div>
