--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
   <meta name="description" content="" />
   <meta name="author" content="" />
   <title>Algebananazzzzz</title>
-  <link rel="icon" type="image/x-icon" href="assets/resume/favicon.ico" />
+  <link rel="apple-touch-icon" sizes="180x180" href="assets/resume/apple-touch-icon.png">
+  <link rel="icon" type="image/png" sizes="32x32" href="assets/resume/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="assets/resume/favicon-16x16.png">
+  <link rel="manifest" href="/site.webmanifest">
   <!-- Font Awesome icons (free version)-->
   <script src="https://use.fontawesome.com/releases/v5.15.3/js/all.js" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/granim/2.0.0/granim.min.js" integrity="sha512-CmlPTWm5+a1Gt2YSNk2rGZVvbH3Zge6imS7M4/vrhC8d+A1RcehmLxWMqUdv8aEu7pwfTo74EtnrR+8Cf8KdCA==" crossorigin="anonymous" referrerpolicy="no-referrer">
@@ -25,7 +28,7 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top canvas-wrapper" id="sideNav">
     <canvas id="canvas" width="300" height="300"></canvas>
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">Daniel Zhou</span>
+      <span class="d-block d-lg-none">Algebananazzzzz</span>
       <!-- <span class="d-none d-lg-block"><img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="assets/img/profile.jpg" alt="..." /></span> -->
     </a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation"><span class="navbar-toggler-icon"></span></button>
@@ -45,30 +48,27 @@
     <!-- About-->
     <section class="resume-section" id="about">
       <div class="resume-section-content">
-        <h1 class="mb-0">
-          Daniel
-          <span class="text-primary">Zhou</span>
+        <h1 class="mb-0 ">
+          Hi, I'm
+          <span class="text-primary">Daniel</span>
         </h1>
-        <div class="subheading mb-5">
+        <div class="subheading mb-5 white">
           <a href="https://github.com/algebananazzzzz">Algebananazzzzz</a> ·
           <a href="mailto:daniel.zhouqx@gmail.com">daniel.zhouqx@gmail.com</a>
         </div>
         <p class="lead mb-5 text-justify">
-          I aspire to become a developer, as I find joy in the development process, and in achieving profound impacts in communities.
+          Welcome to my resume / portfolio page!! Feel free to browse my experiences and projects that define my journey as a developer.
         </p>
-        <p class="text-justify" style="font-size:0.8rem">I pride myself in actively finding opportunities to utilise my skills to practically benefit my community.
-          <!-- I am methodological, focusing on understanding conceptual frameworks, abstract reasoning and best practices.  -->
-          I currently have an offering and is awaiting to enroll in NUS Computer Sciences.
-        </p>
+        <p class="lead text-justify">I’m an aspiring software developer in Singapore. I develop softwares wherever life leads, for myself and everyone. I like ultimate frisbee, swimming and exploring new places. </p>
 
         <hr>
-        <p class="mb-5 text-justify" style="font-size:0.8rem">
-          Apart from my career pursuits, I am a National Serviceman in the Commandos Formation. I am an avid ultimate frisbee player and novice athlete who
-          enjoys triathlon trainings and exploring new sports like rock climbing, archery on this small island.
+        <p class="small mb-5 text-justify">
+          One of the (two) hardest things in Computer Science is naming things...Algebananazzzzz is a wordplay on Algebra and banana (formulated when I was 11). It quickly became my coding alias from then <i class="fas fa-grin-tongue"></i>
         </p>
 
         <div class="social-icons">
           <a class="social-icon" target="_blank" href="https://github.com/algebananazzzzz"><i class="fab fa-github"></i></a>
+          <a class="social-icon" target="_blank" href="https://github.com/algebananazzzzz"><i class="fab fa-telegram"></i></a>
           <a class="social-icon" target="_blank" href="https://mail.google.com/mail/?view=cm&fs=1&to=daniel.zhouqx@gmail.com"><i class="fa fa-envelope"></i></a>
         </div>
 
@@ -88,7 +88,9 @@
             <p class="text-justify">
               Also contributed to a project to accurately perform Facial and Image Recognition with utilising OpenVino inference engine and Neural Compute Stick, and helped out in a hackathon organised for youths, guiding
               older peers to the finals.</p>
-            <a href="assets/resume/reccltr_sl2.pdf" target="_blank">View reccomendation letter</a>
+            <a href="assets/resume/reccltr_sl2.pdf" target="_blank" class="badge badge-pill badge-secondary"><i class="fa fa-file-alt"></i>
+              View reccomendation letter
+            </a>
           </div>
           <div class="flex-shrink-0"><span class="text-primary">June 2018 - July 2018</span></div>
         </div>
@@ -97,45 +99,102 @@
     <hr class="m-0" />
     <section class="resume-section" id="projects">
       <div class="resume-section-content">
-        <h2 class="mb-5">Projects</h2>
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">ProjectBalls</h3>
-            <div class="subheading mb-3">Full stack development</div>
-            <p class="text-justify">
-              Solo full stack development of a video editing web application, ProjectBalls, used by EJC's PE department for editing gameplay videos.</p>
-            <p class="text-justify">
-              Project is developed using the Python Django framework with Postgresql and Redis, and extensive use of frontend frameworks like Bootstrap, Jquery and VideoJS.
-              Also hosted application through a domain using backend technologies of Nginx, Docker and Docker-compose in the development phase.</p>
-            <a href="https://github.com/algebananazzzzz/ProjectBallsWeb">ProjectBalls Github repository</a>
-          </div>
-          <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - June 2021</span></div>
+        <div class="div-center mb-5">
+          <h2>Projects
+          </h2>
+          <span id="toggle_project_viewer" onclick="toggle_project_view()" class="float-end badge-bigger badge badge-pill badge-tertiary my-auto"><i class="fa fa-eye"></i> View more!!</span>
         </div>
-
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">EJC Unconference 2021</h3>
-            <div class="subheading mb-3">Instructor</div>
-            <p class="text-justify">
-              Held an Unconference (tutorial) in EJC to teach interested peers the basics of HTML and architecture of
-              webpages. Participants are then taught to develop their own resumes and deploy them as a static
-              webpage in Github, similar to this resume.</p>
-            <a href="https://algebananazzzzz.github.io/eunoiashining/tutorial/index.html" target="blank">View tutorial</a>
+        <div class="card-columns">
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">AnelaBot</h4>
+              <p class="min-display card-text">A NLP telegram reminder bot, a smarter "Chat with myself".</p>
+              <p class="max-display d-none card-text text-justify">A reminder telegram bot that allows you to create reminders through natural language processing (NLP). </p>
+              <p class="max-display d-none card-text text-justify">Developed a filter algorithm that extracts date and/or time from messages, which
+                Anela recognises to remind users daily and/or on that time. Ignores messages without deadlines specified and has a 'less messages on screen' policy, allowing users to send notes to themselves for future reference.</p>
+              <p class="card-text"><small class="text-primary">Nov 2022 - Jan 2023</small></p>
+              <a href="https://github.com/algebananazzzzz/AnelaBot" target="_blank" class="badge badge-pill badge-primary"><i class="fab fa-github"></i>
+                Github
+              </a>
+              <a href="https://t.me/AnelaBot" target="_blank" class="badge badge-pill badge-secondary"><i class="fab fa-telegram"></i>
+                Telegram
+              </a>
+            </div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">Aug 2021</span></div>
-        </div>
-
-
-        <div class="d-flex flex-column flex-md-row justify-content-between mb-5">
-          <div class="flex-grow-1">
-            <h3 class="mb-0">Chemistry Summary Webpage</h3>
-            <div class="subheading mb-3">Static Webpage developer</div>
-            <p class="text-justify">
-              Created an interactive webpage that serves as a chemistry mindmap for students studying H2 Chemistry in the A level
-              examinations to memorise 69 organic chemistry reactions.</p>
-            <a href="https://algebananazzzzz.github.io/organic-chemistry-mindmap.html" target="blank">View webpage</a>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">EJC Unconference 2021</h4>
+              <p class="min-display card-text">A tutorial on HTML basics and architecture of webpages.</p>
+              <p class="max-display d-none card-text text-justify">Held an Unconference (tutorial) in EJC to teach interested peers the basics of HTML and architecture of webpages. Participants are then taught to develop their own resumes and deploy
+                them as a static webpage in Github, similar to this resume.</p>
+              <p class="card-text"><small class="text-primary">Aug 2021</small></p>
+              <a href="https://github.com/algebananazzzzz/ProjectBallsWeb" target="_blank" class="badge badge-pill badge-primary"><i class="fab fa-github"></i>
+                Github
+              </a>
+            </div>
           </div>
-          <div class="flex-shrink-0"><span class="text-primary">Nov 2020 - June 2021</span></div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Organic Chemistry Mindmap</h4>
+              <p class="min-display card-text">A chemistry mindmap of 69 reactions in H2 Chemistry.</p>
+              <p class="max-display d-none card-text text-justify">Created an interactive webpage that serves as a chemistry mindmap for students studying H2 Chemistry in the A level examinations to memorise 69 organic chemistry reactions.</p>
+              <p class="card-text"><small class="text-primary">June 2021</small></p>
+              <a href="https://algebananazzzzz.github.io/organic-chemistry-mindmap.html" target="_blank" class="badge badge-pill badge-secondary"><i class="fa fa-book"></i>
+                Website
+              </a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Python Telegram Bot Quiz</h4>
+              <p class="min-display card-text">Bootstrappable code for scalable telegram quiz bots.</p>
+              <p class="max-display d-none card-text text-justify">With this repo, developers can easily boostrap Telegram Quiz Bots using the python-telegram-bot (v20.1) framework.</p>
+              <p class="max-display d-none card-text text-justify">This project allows teachers/lecturers etc. to create knowledge quizzes on multiple topics e.g. integration and logarithms in Mathematics, using telegram's native quiz feature for
+                every
+                question. Users can test themselves anywhere, anytime using a familiar interface with ease.</p>
+              <p class="card-text"><small class="text-primary">June 2021</small></p>
+              <a href="https://github.com/algebananazzzzz/python-telegram-bot-quiz" target="_blank" class="badge badge-pill badge-primary"><i class="fab fa-github"></i>
+                Repository
+              </a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">ProjectBalls</h4>
+              <p class="min-display card-text">A video editing web application for coaches.</p>
+              <p class="max-display d-none card-text text-justify">Solo full stack development of a video editing web application, ProjectBalls, used by EJC's PE department for editing gameplay videos.</p>
+              <p class="max-display d-none card-text text-justify"> Project is developed using the Python Django framework with Postgresql and Redis, and extensive use of frontend frameworks like Bootstrap, Jquery and VideoJS. Also hosted application
+                through a domain using backend technologies of Nginx, Docker and Docker-compose in the development phase.</p>
+              <p class="card-text"><small class="text-primary">Nov 2020 - June 2021</small></p>
+              <a href="https://github.com/algebananazzzzz/ProjectBallsWeb" target="_blank" class="badge badge-pill badge-primary"><i class="fab fa-github"></i>
+                Github
+              </a>
+              <a href="#" class="badge badge-pill badge-secondary"><i class="fab fa-octopus-deploy"></i>
+                Deployment
+              </a>
+            </div>
+          </div>
+          <div class="card">
+            <div class="card-body">
+              <h4 class="card-title">Misc. Projects</h4>
+              <p class="min-display card-text">Small projects worth mentioning. Really worth.</p>
+              <h5 class="max-display d-none card-text text-justify">JC life projects</h5>
+              <p class="max-display d-none card-text text-justify">For my PW team and my peers :)</p>
+              <a href="https://github.com/algebananazzzzz/wordcount_4_PW" target="_blank" class="mb-1 max-display d-none badge badge-pill badge-primary"><i class="fab fa-github"></i> PW AutoWordCounter
+              </a>
+              <a href="https://github.com/algebananazzzzz/algebananazzzzz.github.io/blob/main/alevels.html" target="_blank" class="mb-1 max-display d-none badge badge-pill badge-secondary"><i class="fab fa-github"></i> Days to As
+              </a>
+              <p class="max-display d-none card-text"><small class="text-primary">Aug 2020</small></p>
+              <h5 class="max-display d-none card-text text-justify">Medic and CDO Viper projects (NS)</h5>
+              <p class="max-display d-none card-text text-justify">Projects to solve problems my Medic platoon and CMED team face</p>
+              <a href="https://sites.google.com/view/cannotgobackthemalaysia" target="_blank" class="mb-1 max-display d-none badge badge-pill badge-primary"><i class="fa fa-book"></i> PAM site</a>
+              <a href="https://github.com/algebananazzzzz/algebananazzzzz.github.io/blob/main/cdoViper/README.md" target="_blank" class="mb-1 max-display d-none badge badge-pill badge-secondary"><i class="fab fa-github"></i> FormSG AutoYes</a>
+              <p class="max-display d-none card-text"><small class="text-primary">April and Nov 2022</small></p>
+              <p class="min-display card-text"><small class="text-primary">Aug 2020, April and Nov 2022</small></p>
+              <span onclick="toggle_project_view()" class="min-display badge badge-pill badge-tertiary"><i class="fa fa-eye"></i> View
+              </span>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -150,11 +209,11 @@
         <ul class="fa-ul mb-3">
           <li>
             <span class="fa-li"><i class="fas fa-server"></i></span>
-            Experienced in the Python-Django, Flask and NodeJs framework
+            Experienced in the Python-Django framework
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-database"></i></span>
-            Profound in integrating Databases - MySQL, PostgreSQL, NoSQL, Redis
+            Profound in integrating Databases - PostgreSQL, Redis
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-laptop-code"></i></span>
@@ -162,7 +221,7 @@
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-terminal"></i></span>
-            Experience in using DevOps tools - shell, Nginx, Docker and Kubernetes
+            Experience in DevOps and deployment tools - Nginx, Docker and Compose
           </li>
         </ul>
         <div class="subheading mb-3">Artificial Intelligence and machine learning</div>
@@ -222,7 +281,7 @@
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
-            Year 4 Subject Prize in Additional Mathematics and Chemistry, Year 4 Book Prize
+            Year 4 Subject and Book Prize in Additional Mathematics and Chemistry
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-trophy text-warning"></i></span>
