Added Terraform badge

--- a/index.html
+++ b/index.html
@@ -429,7 +429,9 @@
           </li>
           <li>
             <span class="fa-li"><i class="fas fa-certificate text-warning"></i></span>
-            HashiCorp Certified: Terraform Associate (003)
+            HashiCorp Certified: Terraform Associate <a
+              href="https://www.credly.com/badges/2b4e8e39-4354-4edb-98dc-d43d07cdc589/public_url"
+              target="_blank">(003)</a>
           </li>
         </ul>
         <div class="subheading mb-3">Awards</div>
