Deprecated index.html, added demo videos

--- a/index.html
+++ b/index.html
@@ -65,17 +65,12 @@
         <div class="subheading mb-5 white">
           <a href="https://github.com/algebananazzzzz">Algebananazzzzz</a>
         </div>
-        <p class="lead mb-5 text-justify">
-          Welcome to my portfolio page! Please browse through my experiences and projects that have shaped my journey as
-          a developer.
-        </p>
-        <p class="lead text-justify">As an aspiring software developer, I take on software development
-          projects wherever life takes me, for the benefit of myself and others.</p>
 
-        <hr>
-        <p class="small text-justify">
-          My coding alias is Algebananazzzzz, which is a fun wordplay on Algebra and banana!
-        </p>
+        <h4 class="lead mb-5 text-justify">
+          Please note that this Portfolio page has been deprecated and is no longer updated. For the most up-to-date
+          portfolio, kindly visit the
+          newer portfolio page at <a href="https://algebananazzzzz.com/">algebananazzzzz.com</a>
+        </h4>
 
         <button onclick="scrollToSection('skills')" class="btn btn-primary">Scroll Down</button>
       </div>
